--- a/reservation.html
+++ b/reservation.html
@@ -37,39 +37,39 @@
 
     <div id="reservation-form-container" class="animated-heading">
         <h1 class="sub-heading font-pacifico">Book Your table now!</h1>
-        <form action="" method="get">
+        <form action="javascript:void(0);" method="get">
             <div class="form-row">
                 <div class="form-element">
                     <label for="date">Date</label><br>
-                    <input type="date" id="date" name="date">
+                    <input type="date" id="date" name="date" required>
                 </div>
                 <div class="form-element">
                     <label for="time">Time</label><br>
-                    <select name="time" id="time">
-                        <option value="900">9:00</option>
-                        <option value="930">9:30</option>
-                        <option value="1000">10:00</option>
-                        <option value="1030">10:30</option>
-                        <option value="1130">11:00</option>
-                        <option value="1200">11:30</option>
-                        <option value="1230">12:00</option>
-                        <option value="1300">12:30</option>
-                        <option value="1330">13:00</option>
-                        <option value="1400">13:30</option>
-                        <option value="1430">14:00</option>
-                        <option value="1500">14:30</option>
-                        <option value="1530">15:00</option>
-                        <option value="1600">15:30</option>
-                        <option value="1630">16:00</option>
-                        <option value="1700">16:30</option>
-                        <option value="1730">17:00</option>
-                        <option value="1800">17:30</option>
-                        <option value="1830">18:00</option>
+                    <select name="time" id="time" required>
+                        <option value="9:00 AM">9:00</option>
+                        <option value="9:30 AM">9:30</option>
+                        <option value="9:30 AM">10:00</option>
+                        <option value="10:30 AM">10:30</option>
+                        <option value="11:00 AM">11:00</option>
+                        <option value="11:30 AM">11:30</option>
+                        <option value="12:00 PM">12:00</option>
+                        <option value="12:30 PM">12:30</option>
+                        <option value="13:00 PM">13:00</option>
+                        <option value="1:30 PM">13:30</option>
+                        <option value="2:00 PM">14:00</option>
+                        <option value="2:30 PM">14:30</option>
+                        <option value="3:00 PM">15:00</option>
+                        <option value="3:30 PM">15:30</option>
+                        <option value="4:00 PM">16:00</option>
+                        <option value="4:30 PM">16:30</option>
+                        <option value="5:00 PM">17:00</option>
+                        <option value="5:30 PM">17:30</option>
+                        <option value="6:00 PM">18:00</option>
                     </select>
                 </div>
                 <div class="form-element">
                     <label for="people">People</label><br>
-                    <select name="people" id="people">
+                    <select name="people" id="people" required>
                         <option value="1">1 person</option>
                         <option value="2">2 people</option>
                         <option value="3">3 people</option>
@@ -88,20 +88,26 @@
             <div class="form-row">
                 <div class="form-element">
                     <label for="name">Name</label><br>
-                    <input type="text" name="name" id="name">
+                    <input type="text" name="name" id="name" required>
                 </div>
                 <div class="form-element">
                     <label for="phone">Number</label><br>
-                    <input type="tel" name="phone" id="phone" pattern="[0-9]{10}">
+                    <input type="tel" name="phone" id="phone" pattern="[0-9]{10}" required>
                 </div>
                 <div class="form-element">
                     <label for="email">Email</label><br>
-                    <input type="email" name="email" id="email">
+                    <input type="email" name="email" id="email" required>
                 </div>
             </div>
-            <button type="submit" id="submit">BOOK</button>
+            <button id="submit">BOOK</button>
         </form>
     </div>
+
+    <!-- <div id="message-container">
+        <h1 class="font-montserrat">
+            ${name}, Your reservation on date ${date} for ${people} is confirmed. Have a great time!
+        </h1>
+    </div> -->
 
     <div class="booking-container size-up s-up">
         <div>
@@ -136,6 +142,16 @@
         x.addEventListener("change", function () {
             myFunction(x);
         });
+
+        function makeForm() {
+            let date = document.getElementById("date").value;
+            let time = document.getElementById("time").value;
+            let people = document.getElementById("people").value > 1 ? `${document.getElementById("people").value} people` : `${document.getElementById("people").value} person`;
+            let name = document.getElementById("name").value;
+            let message = `${name}, Your reservation on date ${date} for ${people} is confirmed. Have a great time!`;
+            // document.getElementById("message-container").querySelector("h1").innerHTML = message;
+            console.log(message);
+        }
     </script>
 </body>
 
