Add menu items dynamically

--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,7 @@
         <div id="menu-starters" class="menu-tab">
             <div class="menu-img box-shadow" style="background-image: url(./image/menu/starter.jpg);"></div>
             <div class="menu-item-container">
-                <div class="menu-item">
+                <!-- <div class="menu-item">
                     <h2>Chilly Paneer</h2>
                     <p>Crispy fried cottage cheese</p>
                 </div>
@@ -58,7 +58,7 @@
                 <div class="menu-item" id="link-main">
                     <h2>Veg. Cheese Roll</h2>
                     <p>Chef's Special</p>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -68,7 +68,7 @@
     <div class="menu-container">
         <div id="menu-main" class="menu-tab">
             <div class="menu-item-container reveal size-up right">
-                <div class="menu-item">
+                <!-- <div class="menu-item">
                     <h2>Paneer Tikka Masala</h2>
                     <p>Barberqued paneer pieces cooked in makhani gravy.</p>
                 </div>
@@ -87,7 +87,7 @@
                 <div class="menu-item">
                     <h2>Veg. Cheese Roll</h2>
                     <p>Chef's Special</p>
-                </div>
+                </div> -->
             </div>
             <div class="menu-img box-shadow reveal fade-right" style="background-image: url(./image/menu/main.jpg);" id="link-drinks"></div>
         </div>
@@ -158,6 +158,7 @@
     </footer>
 
     <script src="./nav.js"></script>
+    <script src="./menu.js"></script>
 </body>
 
 </html>
