--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
         </div>
         <div class="index-menu-column">
             <div id="index-main" class="index-menu-item box-shadow reveal fade-in">
-                <a href="./menu.html#link-main"><p class="sub-heading font-pacifico">Main</p></a>
+                <a href="./menu.html#menu-main"><p class="sub-heading font-pacifico">Main</p></a>
             </div>
         </div>
         <div class="index-menu-column">
             <div id="index-drinks" class="index-menu-item box-shadow reveal fade-in">
-                <a href="./menu.html#link-drinks"><p class="sub-heading font-pacifico">Drinks</p></a>
+                <a href="./menu.html#menu-drinks"><p class="sub-heading font-pacifico">Drinks</p></a>
             </div>
         </div>
         <div class="index-menu-column">
             <div id="index-dessert" class="index-menu-item box-shadow reveal fade-in">
-                <a href="./menu.html#link-dessert"><p class="sub-heading font-pacifico">Dessert</p></a>
+                <a href="./menu.html#menu-dessert"><p class="sub-heading font-pacifico">Dessert</p></a>
             </div>
         </div>
     </div>
