--- a/index.html
+++ b/index.html
@@ -68,22 +68,22 @@
     <div id="index-menu-container" class="background">
         <div class="index-menu-column">
             <div id="index-starter" class="index-menu-item box-shadow reveal fade-in">
-                <a href="./menu.html#menu-starter"><p class="sub-heading font-pacifico">Starter</p></a>
+                <a href="./menu.html#heading-starters"><p class="sub-heading font-pacifico">Starter</p></a>
             </div>
         </div>
         <div class="index-menu-column">
             <div id="index-main" class="index-menu-item box-shadow reveal fade-in">
-                <a href="./menu.html#menu-main"><p class="sub-heading font-pacifico">Main</p></a>
+                <a href="./menu.html#heading-main"><p class="sub-heading font-pacifico">Main</p></a>
             </div>
         </div>
         <div class="index-menu-column">
             <div id="index-drinks" class="index-menu-item box-shadow reveal fade-in">
-                <a href="./menu.html#menu-drinks"><p class="sub-heading font-pacifico">Drinks</p></a>
+                <a href="./menu.html#heading-drinks"><p class="sub-heading font-pacifico">Drinks</p></a>
             </div>
         </div>
         <div class="index-menu-column">
             <div id="index-dessert" class="index-menu-item box-shadow reveal fade-in">
-                <a href="./menu.html#menu-dessert"><p class="sub-heading font-pacifico">Dessert</p></a>
+                <a href="./menu.html#heading-dessert"><p class="sub-heading font-pacifico">Dessert</p></a>
             </div>
         </div>
     </div>
