--- a/menu.html
+++ b/menu.html
@@ -33,7 +33,7 @@
         <h1 class="main-heading font-montserrat text-shadow animated-heading">The Menu</h1>
     </div>
 
-    <h2 class="sub-heading font-pacifico menu-heading" id="heading-starter">Starters</h2>
+    <h2 class="sub-heading font-pacifico menu-heading" id="heading-starters">Starters</h2>
 
     <div class="menu-container">
         <div id="menu-starters" class="menu-tab">
@@ -49,11 +49,11 @@
         <div id="menu-main" class="menu-tab">
             <div class="menu-item-container reveal size-up right">
             </div>
-            <div class="menu-img box-shadow reveal fade-right" style="background-image: url(./image/menu/main.jpg);" id="link-drinks"></div>
+            <div class="menu-img box-shadow reveal fade-right" style="background-image: url(./image/menu/main.jpg);"></div>
         </div>
     </div>
 
-    <h2 class="sub-heading font-pacifico menu-heading reveal size-up">Drinks</h2>
+    <h2 class="sub-heading font-pacifico menu-heading reveal size-up" id="heading-drinks">Drinks</h2>
 
     <div class="menu-container">
         <div id="menu-drinks" class="menu-tab">
@@ -63,7 +63,7 @@
         </div>
     </div>
 
-    <h2 class="sub-heading font-pacifico menu-heading reveal size-up">Dessert</h2>
+    <h2 class="sub-heading font-pacifico menu-heading reveal size-up" id="heading-dessert">Dessert</h2>
 
     <div class="menu-container">
         <div id="menu-dessert" class="menu-tab">
