Form changes and Menu load even locally

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <span class="bar"></span>
         </div>
     </div>
-    <div id="main" class="carousel slide" data-bs-ride="carousel">
+    <div id="main" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#main" data-bs-slide-to="0" class="active"></button>
             <button type="button" data-bs-target="#main" data-bs-slide-to="1"></button>
